# submeister

./: flake.nix  player.py  pyproject.toml  subsonic.py  ui.py
extensions/: music.py  owner.py
src/: player.py  submeister.py
